@@ -2,7 +2,7 @@ Package: memisc
 Type: Package
 Title: Tools for Management of Survey Data, Graphics, Programming,
         Statistics, and Simulation
-Version: 0.95-21
+Version: 0.95-22
 Date: 2008-08-19
 Author: Martin Elff
 Maintainer: Martin Elff <melff@essex.ac.uk>
@@ -20,6 +20,6 @@ License: GPL-2
 LazyLoad: Yes
 Depends: lattice, grid, stats, methods, utils, MASS
 URL: http://www.martin-elff.net/MartinsRPackages
-Packaged: 2009-08-19 21:11:54 UTC; elff
+Packaged: 2009-10-14 17:13:59 UTC; elff
 Repository: CRAN
-Date/Publication: 2009-08-20 13:48:07
+Date/Publication: 2009-10-15 11:08:42
