@@ -1,7 +1,6 @@
 queryOne <- function(x,
                 pattern,
                 fuzzy=TRUE,
-                extended=FALSE,
                 perl=TRUE,
                 fixed=TRUE,
                 ignore.case=TRUE,
@@ -16,7 +15,6 @@ queryOne <- function(x,
                   max.distance=max.distance)
              else
                 suppressWarnings(grep(pattern,x,
-                  extended=extended,
                   perl=perl,
                   fixed=fixed,
                   ignore.case=ignore.case))
@@ -26,7 +24,6 @@ queryOne <- function(x,
 queryList <- function(x,
                 pattern,
                 fuzzy=TRUE,
-                extended=FALSE,
                 perl=TRUE,
                 fixed=TRUE,
                 ignore.case=TRUE,
@@ -37,7 +34,6 @@ queryList <- function(x,
    res <- lapply(x,query,
     pattern=pattern,
     fuzzy=fuzzy,
-    extended=extended,
     perl=perl,
     fixed=fixed,
     ignore.case=ignore.case,
